tests/valid/definite/ConstrainedInt_Valid_2.whiley
// this is a comment!
define cr2num as {1,2,3,4}

void f(cr2num x):
    y = x
    print str(y)

void System::main([string] args):
    f(3)
